--- a/src/NullableLogger/NullableLogger.csproj
+++ b/src/NullableLogger/NullableLogger.csproj
@@ -3,6 +3,19 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
+    
+    <PropertyGroup>
+        <!-- Properties related to NuGet packaging: -->
+        <IsPackable>True</IsPackable>
+        <PackageId>NullableLogger</PackageId>
+        <Version>0.0.1</Version>
+        <Authors>Roman Shcherbakov</Authors>
+        <Title>NullableLogger: a simple logging wrapper library</Title>
+        <Description>NullableLogger wrapper for increase performance by more accurate work with strings.</Description>
+        <PackageTags>log</PackageTags>
+        <PackageProjectUrl>https://github.com/daredever/NullableLogger</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/daredever/NullableLogger</RepositoryUrl>
+    </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
