--- a/src/NullableLogger/NullableLogger.csproj
+++ b/src/NullableLogger/NullableLogger.csproj
@@ -15,6 +15,8 @@
         <PackageTags>log</PackageTags>
         <PackageProjectUrl>https://github.com/daredever/NullableLogger</PackageProjectUrl>
         <RepositoryUrl>https://github.com/daredever/NullableLogger</RepositoryUrl>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/daredever/NullableLogger/master/LICENSE</PackageLicenseUrl>
+        <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
