--- a/src/NullableLogger/NullableLogger.csproj
+++ b/src/NullableLogger/NullableLogger.csproj
@@ -3,24 +3,24 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
-    
+
     <PropertyGroup>
         <!-- Properties related to NuGet packaging: -->
         <IsPackable>True</IsPackable>
         <PackageId>NullableLogger</PackageId>
-        <Version>0.0.3</Version>
+        <Version>0.0.4</Version>
         <Authors>Roman Shcherbakov</Authors>
         <Title>NullableLogger: a simple logging wrapper library</Title>
         <Description>NullableLogger wrapper for increase performance by more accurate work with strings.</Description>
         <PackageTags>log</PackageTags>
         <PackageProjectUrl>https://github.com/daredever/NullableLogger</PackageProjectUrl>
         <RepositoryUrl>https://github.com/daredever/NullableLogger</RepositoryUrl>
-        <PackageLicenseUrl>https://raw.githubusercontent.com/daredever/NullableLogger/master/LICENSE</PackageLicenseUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4"/>
     </ItemGroup>
 
 </Project>
