--- a/Benchmarks/NullableLogger.Benchmarks/NullableLogger.Benchmarks.csproj
+++ b/Benchmarks/NullableLogger.Benchmarks/NullableLogger.Benchmarks.csproj
@@ -7,7 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />      
     </ItemGroup>
 
     <ItemGroup>
