--- a/Benchmarks/CommonBenchmarks/CommonBenchmarks.csproj
+++ b/Benchmarks/CommonBenchmarks/CommonBenchmarks.csproj
@@ -6,11 +6,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\NullableLogger\NullableLogger.csproj" />
+      <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />      
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.5" />
+      <ProjectReference Include="..\..\src\PerformanceLogging\PerformanceLogging.csproj" />
     </ItemGroup>
 
 </Project>
