--- a/Demo/BasicUsageExamples/BasicUsageExamples.csproj
+++ b/Demo/BasicUsageExamples/BasicUsageExamples.csproj
@@ -6,12 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />      
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\NullableLogger\NullableLogger.csproj" />
+      <ProjectReference Include="..\..\src\PerformanceLogging\PerformanceLogging.csproj" />
     </ItemGroup>
 
 </Project>
